# pfm-schema

./: .env  .gitignore  Cargo.toml  README.md
migrations/2020-12-15-121424_create_object_schema/: down.sql  up.sql
migrations/2020-12-16-164800_create_field_schema/: down.sql  up.sql
src/: config.rs  main.rs  schema.rs
src/models/: object.rs
src/routes/: mod.rs  object.rs  object_schema.rs  token.rs
